# octopus-llm-engine

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: inference_bench.rs
examples/: basic_inference.rs
rust-ai-engine-landing/assets/: charts.js
src/: lib.rs  main.rs
src/api/: mod.rs  server.rs
src/backend/: cpu.rs  cuda.rs  mod.rs
src/engine/: graph.rs  inference.rs  mod.rs  tensor.rs
src/model/: mod.rs  onnx_loader.rs  transformer.rs
tests/: integration_test.rs
